1stAssignment/part3/test_grammar/ParPart.info
-----------------------------------------------------------------------------
Info file generated by Happy Version 1.20.1.1 from ParPart.y
-----------------------------------------------------------------------------

state 201 contains 2 shift/reduce conflicts.

-----------------------------------------------------------------------------
Grammar
-----------------------------------------------------------------------------
	%start_pProgram -> Program                         (0)
	%start_pListDef -> ListDef                         (1)
	%start_pDef -> Def                                 (2)
	%start_pListArg -> ListArg                         (3)
	%start_pArg -> Arg                                 (4)
	%start_pStm -> Stm                                 (5)
	%start_pElse -> Else                               (6)
	%start_pListStm -> ListStm                         (7)
	%start_pExp15 -> Exp15                             (8)
	%start_pExp14 -> Exp14                             (9)
	%start_pExp12 -> Exp12                             (10)
	%start_pExp11 -> Exp11                             (11)
	%start_pExp10 -> Exp10                             (12)
	%start_pExp8 -> Exp8                               (13)
	%start_pExp2 -> Exp2                               (14)
	%start_pListExp -> ListExp                         (15)
	%start_pExp -> Exp                                 (16)
	%start_pExp1 -> Exp1                               (17)
	%start_pExp3 -> Exp3                               (18)
	%start_pExp4 -> Exp4                               (19)
	%start_pExp5 -> Exp5                               (20)
	%start_pExp6 -> Exp6                               (21)
	%start_pExp7 -> Exp7                               (22)
	%start_pExp9 -> Exp9                               (23)
	%start_pExp13 -> Exp13                             (24)
	%start_pQualConst -> QualConst                     (25)
	%start_pType -> Type                               (26)
	%start_pLiteral -> Literal                         (27)
	%start_pListId -> ListId                           (28)
	Char -> L_charac                                   (29)
	Integer -> L_integ                                 (30)
	String -> L_quoted                                 (31)
	Float -> L_Float                                   (32)
	Id -> L_Id                                         (33)
	Program -> ListDef                                 (34)
	ListDef ->                                         (35)
	ListDef -> Def ListDef                             (36)
	Def -> Type Id '(' ListArg ')' '{' ListStm '}'     (37)
	Def -> 'inline' Type Id '(' ListArg ')' '{' ListStm '}'   (38)
	Def -> 'using' QualConst ';'                       (39)
	ListArg ->                                         (40)
	ListArg -> Arg                                     (41)
	ListArg -> Arg ',' ListArg                         (42)
	Arg -> Type                                        (43)
	Arg -> Type Id                                     (44)
	Arg -> Type Id '=' Exp                             (45)
	Stm -> Exp ';'                                     (46)
	Stm -> 'while' '(' Exp ')' Stm                     (47)
	Stm -> 'typedef' Type Id ';'                       (48)
	Stm -> '{' ListStm '}'                             (49)
	Stm -> 'if' '(' Exp ')' Stm                        (50)
	Stm -> 'if' '(' Exp ')' Stm Else                   (51)
	Stm -> 'return' Exp ';'                            (52)
	Stm -> 'return' ';'                                (53)
	Stm -> Type Id ';'                                 (54)
	Stm -> Type Id ',' ListId ';'                      (55)
	Stm -> Type Id '=' Exp ';'                         (56)
	Else -> 'elif' '(' Exp ')' Stm Else                (57)
	Else -> 'else' Stm                                 (58)
	ListStm ->                                         (59)
	ListStm -> Stm ListStm                             (60)
	Exp15 -> Literal                                   (61)
	Exp15 -> String Exp15                              (62)
	Exp15 -> QualConst                                 (63)
	Exp15 -> '(' Exp ')'                               (64)
	Exp14 -> Id '[' Exp ']'                            (65)
	Exp14 -> Id '(' ListExp ')'                        (66)
	Exp14 -> Exp15                                     (67)
	Exp12 -> Exp12 '*' Exp13                           (68)
	Exp12 -> Exp12 '/' Exp13                           (69)
	Exp12 -> Exp12 '%' Exp13                           (70)
	Exp12 -> Exp13                                     (71)
	Exp11 -> Exp11 '+' Exp12                           (72)
	Exp11 -> Exp11 '-' Exp12                           (73)
	Exp11 -> Exp12                                     (74)
	Exp10 -> Exp10 '>>' Exp11                          (75)
	Exp10 -> Exp10 '<<' Exp11                          (76)
	Exp10 -> Exp11                                     (77)
	Exp8 -> Exp8 '==' Exp9                             (78)
	Exp8 -> Exp8 '!=' Exp9                             (79)
	Exp8 -> Exp9                                       (80)
	Exp2 -> Id '=' Exp3                                (81)
	Exp2 -> Id '+=' Exp3                               (82)
	Exp2 -> Id '-=' Exp3                               (83)
	Exp2 -> Exp2 '?' Exp2 ':' Exp3                     (84)
	Exp2 -> Exp3                                       (85)
	ListExp ->                                         (86)
	ListExp -> Exp                                     (87)
	ListExp -> Exp ',' ListExp                         (88)
	Exp -> Exp1                                        (89)
	Exp1 -> Exp2                                       (90)
	Exp3 -> Exp4                                       (91)
	Exp4 -> Exp5                                       (92)
	Exp5 -> Exp6                                       (93)
	Exp6 -> Exp7                                       (94)
	Exp7 -> Exp8                                       (95)
	Exp9 -> Exp10                                      (96)
	Exp13 -> Exp14                                     (97)
	QualConst -> Id                                    (98)
	QualConst -> QualConst '::' Id                     (99)
	Type -> 'int'                                      (100)
	Type -> 'bool'                                     (101)
	Type -> 'char'                                     (102)
	Type -> 'double'                                   (103)
	Type -> 'void'                                     (104)
	Type -> QualConst                                  (105)
	Literal -> Integer                                 (106)
	Literal -> String                                  (107)
	Literal -> Char                                    (108)
	Literal -> Float                                   (109)
	ListId -> Id                                       (110)
	ListId -> Id ',' ListId                            (111)

-----------------------------------------------------------------------------
Terminals
-----------------------------------------------------------------------------
	'!='           { PT _ (TS _ 1) }
	'%'            { PT _ (TS _ 2) }
	'('            { PT _ (TS _ 3) }
	')'            { PT _ (TS _ 4) }
	'*'            { PT _ (TS _ 5) }
	'+'            { PT _ (TS _ 6) }
	'+='           { PT _ (TS _ 7) }
	','            { PT _ (TS _ 8) }
	'-'            { PT _ (TS _ 9) }
	'-='           { PT _ (TS _ 10) }
	'/'            { PT _ (TS _ 11) }
	':'            { PT _ (TS _ 12) }
	'::'           { PT _ (TS _ 13) }
	';'            { PT _ (TS _ 14) }
	'<<'           { PT _ (TS _ 15) }
	'='            { PT _ (TS _ 16) }
	'=='           { PT _ (TS _ 17) }
	'>>'           { PT _ (TS _ 18) }
	'?'            { PT _ (TS _ 19) }
	'['            { PT _ (TS _ 20) }
	']'            { PT _ (TS _ 21) }
	'bool'         { PT _ (TS _ 22) }
	'char'         { PT _ (TS _ 23) }
	'double'       { PT _ (TS _ 24) }
	'elif'         { PT _ (TS _ 25) }
	'else'         { PT _ (TS _ 26) }
	'if'           { PT _ (TS _ 27) }
	'inline'       { PT _ (TS _ 28) }
	'int'          { PT _ (TS _ 29) }
	'return'       { PT _ (TS _ 30) }
	'typedef'      { PT _ (TS _ 31) }
	'using'        { PT _ (TS _ 32) }
	'void'         { PT _ (TS _ 33) }
	'while'        { PT _ (TS _ 34) }
	'{'            { PT _ (TS _ 35) }
	'}'            { PT _ (TS _ 36) }
	L_charac       { PT _ (TC $$) }
	L_integ        { PT _ (TI $$) }
	L_quoted       { PT _ (TL $$) }
	L_Float        { PT _ (T_Float $$) }
	L_Id           { PT _ (T_Id $$) }

-----------------------------------------------------------------------------
Non-terminals
-----------------------------------------------------------------------------
	%start_pProgram rule  0
	%start_pListDef rule  1
	%start_pDef     rule  2
	%start_pListArg rule  3
	%start_pArg     rule  4
	%start_pStm     rule  5
	%start_pElse    rule  6
	%start_pListStm rule  7
	%start_pExp15   rule  8
	%start_pExp14   rule  9
	%start_pExp12   rule  10
	%start_pExp11   rule  11
	%start_pExp10   rule  12
	%start_pExp8    rule  13
	%start_pExp2    rule  14
	%start_pListExp rule  15
	%start_pExp     rule  16
	%start_pExp1    rule  17
	%start_pExp3    rule  18
	%start_pExp4    rule  19
	%start_pExp5    rule  20
	%start_pExp6    rule  21
	%start_pExp7    rule  22
	%start_pExp9    rule  23
	%start_pExp13   rule  24
	%start_pQualConst rule  25
	%start_pType    rule  26
	%start_pLiteral rule  27
	%start_pListId  rule  28
	Char            rule  29
	Integer         rule  30
	String          rule  31
	Float           rule  32
	Id              rule  33
	Program         rule  34
	ListDef         rules 35, 36
	Def             rules 37, 38, 39
	ListArg         rules 40, 41, 42
	Arg             rules 43, 44, 45
	Stm             rules 46, 47, 48, 49, 50, 51, 52, 53, 54, 55, 56
	Else            rules 57, 58
	ListStm         rules 59, 60
	Exp15           rules 61, 62, 63, 64
	Exp14           rules 65, 66, 67
	Exp12           rules 68, 69, 70, 71
	Exp11           rules 72, 73, 74
	Exp10           rules 75, 76, 77
	Exp8            rules 78, 79, 80
	Exp2            rules 81, 82, 83, 84, 85
	ListExp         rules 86, 87, 88
	Exp             rule  89
	Exp1            rule  90
	Exp3            rule  91
	Exp4            rule  92
	Exp5            rule  93
	Exp6            rule  94
	Exp7            rule  95
	Exp9            rule  96
	Exp13           rule  97
	QualConst       rules 98, 99
	Type            rules 100, 101, 102, 103, 104, 105
	Literal         rules 106, 107, 108, 109
	ListId          rules 110, 111

-----------------------------------------------------------------------------
States
-----------------------------------------------------------------------------
State 0

	%start_pProgram -> . Program                        (rule 0)

	'bool'         shift, and enter state 45
	'char'         shift, and enter state 46
	'double'       shift, and enter state 47
	'inline'       shift, and enter state 110
	'int'          shift, and enter state 48
	'using'        shift, and enter state 111
	'void'         shift, and enter state 49
	L_Id           shift, and enter state 33
	%eof           reduce using rule 35

	Id             goto state 42
	Program        goto state 114
	ListDef        goto state 115
	Def            goto state 113
	QualConst      goto state 43
	Type           goto state 109

State 1

	%start_pListDef -> . ListDef                        (rule 1)

	'bool'         shift, and enter state 45
	'char'         shift, and enter state 46
	'double'       shift, and enter state 47
	'inline'       shift, and enter state 110
	'int'          shift, and enter state 48
	'using'        shift, and enter state 111
	'void'         shift, and enter state 49
	L_Id           shift, and enter state 33
	%eof           reduce using rule 35

	Id             goto state 42
	ListDef        goto state 112
	Def            goto state 113
	QualConst      goto state 43
	Type           goto state 109

State 2

	%start_pDef -> . Def                                (rule 2)

	'bool'         shift, and enter state 45
	'char'         shift, and enter state 46
	'double'       shift, and enter state 47
	'inline'       shift, and enter state 110
	'int'          shift, and enter state 48
	'using'        shift, and enter state 111
	'void'         shift, and enter state 49
	L_Id           shift, and enter state 33

	Id             goto state 42
	Def            goto state 108
	QualConst      goto state 43
	Type           goto state 109

State 3

	%start_pListArg -> . ListArg                        (rule 3)

	'bool'         shift, and enter state 45
	'char'         shift, and enter state 46
	'double'       shift, and enter state 47
	'int'          shift, and enter state 48
	'void'         shift, and enter state 49
	L_Id           shift, and enter state 33
	%eof           reduce using rule 40

	Id             goto state 42
	ListArg        goto state 106
	Arg            goto state 107
	QualConst      goto state 43
	Type           goto state 105

State 4

	%start_pArg -> . Arg                                (rule 4)

	'bool'         shift, and enter state 45
	'char'         shift, and enter state 46
	'double'       shift, and enter state 47
	'int'          shift, and enter state 48
	'void'         shift, and enter state 49
	L_Id           shift, and enter state 33

	Id             goto state 42
	Arg            goto state 104
	QualConst      goto state 43
	Type           goto state 105

State 5

	%start_pStm -> . Stm                                (rule 5)

	'('            shift, and enter state 58
	'bool'         shift, and enter state 45
	'char'         shift, and enter state 46
	'double'       shift, and enter state 47
	'if'           shift, and enter state 95
	'int'          shift, and enter state 48
	'return'       shift, and enter state 96
	'typedef'      shift, and enter state 97
	'void'         shift, and enter state 49
	'while'        shift, and enter state 98
	'{'            shift, and enter state 99
	L_charac       shift, and enter state 30
	L_integ        shift, and enter state 39
	L_quoted       shift, and enter state 40
	L_Float        shift, and enter state 41
	L_Id           shift, and enter state 33

	Char           goto state 34
	Integer        goto state 35
	String         goto state 51
	Float          goto state 37
	Id             goto state 75
	Stm            goto state 103
	Exp15          goto state 53
	Exp14          goto state 54
	Exp12          goto state 59
	Exp11          goto state 60
	Exp10          goto state 61
	Exp8           goto state 64
	Exp2           goto state 76
	Exp            goto state 92
	Exp1           goto state 80
	Exp3           goto state 78
	Exp4           goto state 74
	Exp5           goto state 72
	Exp6           goto state 70
	Exp7           goto state 68
	Exp9           goto state 66
	Exp13          goto state 63
	QualConst      goto state 93
	Type           goto state 94
	Literal        goto state 57

State 6

	%start_pElse -> . Else                              (rule 6)

	'elif'         shift, and enter state 101
	'else'         shift, and enter state 102

	Else           goto state 100

State 7

	%start_pListStm -> . ListStm                        (rule 7)

	'('            shift, and enter state 58
	'bool'         shift, and enter state 45
	'char'         shift, and enter state 46
	'double'       shift, and enter state 47
	'if'           shift, and enter state 95
	'int'          shift, and enter state 48
	'return'       shift, and enter state 96
	'typedef'      shift, and enter state 97
	'void'         shift, and enter state 49
	'while'        shift, and enter state 98
	'{'            shift, and enter state 99
	L_charac       shift, and enter state 30
	L_integ        shift, and enter state 39
	L_quoted       shift, and enter state 40
	L_Float        shift, and enter state 41
	L_Id           shift, and enter state 33
	%eof           reduce using rule 59

	Char           goto state 34
	Integer        goto state 35
	String         goto state 51
	Float          goto state 37
	Id             goto state 75
	Stm            goto state 90
	ListStm        goto state 91
	Exp15          goto state 53
	Exp14          goto state 54
	Exp12          goto state 59
	Exp11          goto state 60
	Exp10          goto state 61
	Exp8           goto state 64
	Exp2           goto state 76
	Exp            goto state 92
	Exp1           goto state 80
	Exp3           goto state 78
	Exp4           goto state 74
	Exp5           goto state 72
	Exp6           goto state 70
	Exp7           goto state 68
	Exp9           goto state 66
	Exp13          goto state 63
	QualConst      goto state 93
	Type           goto state 94
	Literal        goto state 57

State 8

	%start_pExp15 -> . Exp15                            (rule 8)

	'('            shift, and enter state 58
	L_charac       shift, and enter state 30
	L_integ        shift, and enter state 39
	L_quoted       shift, and enter state 40
	L_Float        shift, and enter state 41
	L_Id           shift, and enter state 33

	Char           goto state 34
	Integer        goto state 35
	String         goto state 51
	Float          goto state 37
	Id             goto state 42
	Exp15          goto state 89
	QualConst      goto state 56
	Literal        goto state 57

State 9

	%start_pExp14 -> . Exp14                            (rule 9)

	'('            shift, and enter state 58
	L_charac       shift, and enter state 30
	L_integ        shift, and enter state 39
	L_quoted       shift, and enter state 40
	L_Float        shift, and enter state 41
	L_Id           shift, and enter state 33

	Char           goto state 34
	Integer        goto state 35
	String         goto state 51
	Float          goto state 37
	Id             goto state 52
	Exp15          goto state 53
	Exp14          goto state 88
	QualConst      goto state 56
	Literal        goto state 57

State 10

	%start_pExp12 -> . Exp12                            (rule 10)

	'('            shift, and enter state 58
	L_charac       shift, and enter state 30
	L_integ        shift, and enter state 39
	L_quoted       shift, and enter state 40
	L_Float        shift, and enter state 41
	L_Id           shift, and enter state 33

	Char           goto state 34
	Integer        goto state 35
	String         goto state 51
	Float          goto state 37
	Id             goto state 52
	Exp15          goto state 53
	Exp14          goto state 54
	Exp12          goto state 87
	Exp13          goto state 63
	QualConst      goto state 56
	Literal        goto state 57

State 11

	%start_pExp11 -> . Exp11                            (rule 11)

	'('            shift, and enter state 58
	L_charac       shift, and enter state 30
	L_integ        shift, and enter state 39
	L_quoted       shift, and enter state 40
	L_Float        shift, and enter state 41
	L_Id           shift, and enter state 33

	Char           goto state 34
	Integer        goto state 35
	String         goto state 51
	Float          goto state 37
	Id             goto state 52
	Exp15          goto state 53
	Exp14          goto state 54
	Exp12          goto state 59
	Exp11          goto state 86
	Exp13          goto state 63
	QualConst      goto state 56
	Literal        goto state 57

State 12

	%start_pExp10 -> . Exp10                            (rule 12)

	'('            shift, and enter state 58
	L_charac       shift, and enter state 30
	L_integ        shift, and enter state 39
	L_quoted       shift, and enter state 40
	L_Float        shift, and enter state 41
	L_Id           shift, and enter state 33

	Char           goto state 34
	Integer        goto state 35
	String         goto state 51
	Float          goto state 37
	Id             goto state 52
	Exp15          goto state 53
	Exp14          goto state 54
	Exp12          goto state 59
	Exp11          goto state 60
	Exp10          goto state 85
	Exp13          goto state 63
	QualConst      goto state 56
	Literal        goto state 57

State 13

	%start_pExp8 -> . Exp8                              (rule 13)

	'('            shift, and enter state 58
	L_charac       shift, and enter state 30
	L_integ        shift, and enter state 39
	L_quoted       shift, and enter state 40
	L_Float        shift, and enter state 41
	L_Id           shift, and enter state 33

	Char           goto state 34
	Integer        goto state 35
	String         goto state 51
	Float          goto state 37
	Id             goto state 52
	Exp15          goto state 53
	Exp14          goto state 54
	Exp12          goto state 59
	Exp11          goto state 60
	Exp10          goto state 61
	Exp8           goto state 84
	Exp9           goto state 66
	Exp13          goto state 63
	QualConst      goto state 56
	Literal        goto state 57

State 14

	%start_pExp2 -> . Exp2                              (rule 14)

	'('            shift, and enter state 58
	L_charac       shift, and enter state 30
	L_integ        shift, and enter state 39
	L_quoted       shift, and enter state 40
	L_Float        shift, and enter state 41
	L_Id           shift, and enter state 33

	Char           goto state 34
	Integer        goto state 35
	String         goto state 51
	Float          goto state 37
	Id             goto state 75
	Exp15          goto state 53
	Exp14          goto state 54
	Exp12          goto state 59
	Exp11          goto state 60
	Exp10          goto state 61
	Exp8           goto state 64
	Exp2           goto state 83
	Exp3           goto state 78
	Exp4           goto state 74
	Exp5           goto state 72
	Exp6           goto state 70
	Exp7           goto state 68
	Exp9           goto state 66
	Exp13          goto state 63
	QualConst      goto state 56
	Literal        goto state 57

State 15

	%start_pListExp -> . ListExp                        (rule 15)

	'('            shift, and enter state 58
	L_charac       shift, and enter state 30
	L_integ        shift, and enter state 39
	L_quoted       shift, and enter state 40
	L_Float        shift, and enter state 41
	L_Id           shift, and enter state 33
	%eof           reduce using rule 86

	Char           goto state 34
	Integer        goto state 35
	String         goto state 51
	Float          goto state 37
	Id             goto state 75
	Exp15          goto state 53
	Exp14          goto state 54
	Exp12          goto state 59
	Exp11          goto state 60
	Exp10          goto state 61
	Exp8           goto state 64
	Exp2           goto state 76
	ListExp        goto state 81
	Exp            goto state 82
	Exp1           goto state 80
	Exp3           goto state 78
	Exp4           goto state 74
	Exp5           goto state 72
	Exp6           goto state 70
	Exp7           goto state 68
	Exp9           goto state 66
	Exp13          goto state 63
	QualConst      goto state 56
	Literal        goto state 57

State 16

	%start_pExp -> . Exp                                (rule 16)

	'('            shift, and enter state 58
	L_charac       shift, and enter state 30
	L_integ        shift, and enter state 39
	L_quoted       shift, and enter state 40
	L_Float        shift, and enter state 41
	L_Id           shift, and enter state 33

	Char           goto state 34
	Integer        goto state 35
	String         goto state 51
	Float          goto state 37
	Id             goto state 75
	Exp15          goto state 53
	Exp14          goto state 54
	Exp12          goto state 59
	Exp11          goto state 60
	Exp10          goto state 61
	Exp8           goto state 64
	Exp2           goto state 76
	Exp            goto state 79
	Exp1           goto state 80
	Exp3           goto state 78
	Exp4           goto state 74
	Exp5           goto state 72
	Exp6           goto state 70
	Exp7           goto state 68
	Exp9           goto state 66
	Exp13          goto state 63
	QualConst      goto state 56
	Literal        goto state 57

State 17

	%start_pExp1 -> . Exp1                              (rule 17)

	'('            shift, and enter state 58
	L_charac       shift, and enter state 30
	L_integ        shift, and enter state 39
	L_quoted       shift, and enter state 40
	L_Float        shift, and enter state 41
	L_Id           shift, and enter state 33

	Char           goto state 34
	Integer        goto state 35
	String         goto state 51
	Float          goto state 37
	Id             goto state 75
	Exp15          goto state 53
	Exp14          goto state 54
	Exp12          goto state 59
	Exp11          goto state 60
	Exp10          goto state 61
	Exp8           goto state 64
	Exp2           goto state 76
	Exp1           goto state 77
	Exp3           goto state 78
	Exp4           goto state 74
	Exp5           goto state 72
	Exp6           goto state 70
	Exp7           goto state 68
	Exp9           goto state 66
	Exp13          goto state 63
	QualConst      goto state 56
	Literal        goto state 57

State 18

	%start_pExp3 -> . Exp3                              (rule 18)

	'('            shift, and enter state 58
	L_charac       shift, and enter state 30
	L_integ        shift, and enter state 39
	L_quoted       shift, and enter state 40
	L_Float        shift, and enter state 41
	L_Id           shift, and enter state 33

	Char           goto state 34
	Integer        goto state 35
	String         goto state 51
	Float          goto state 37
	Id             goto state 52
	Exp15          goto state 53
	Exp14          goto state 54
	Exp12          goto state 59
	Exp11          goto state 60
	Exp10          goto state 61
	Exp8           goto state 64
	Exp3           goto state 73
	Exp4           goto state 74
	Exp5           goto state 72
	Exp6           goto state 70
	Exp7           goto state 68
	Exp9           goto state 66
	Exp13          goto state 63
	QualConst      goto state 56
	Literal        goto state 57

State 19

	%start_pExp4 -> . Exp4                              (rule 19)

	'('            shift, and enter state 58
	L_charac       shift, and enter state 30
	L_integ        shift, and enter state 39
	L_quoted       shift, and enter state 40
	L_Float        shift, and enter state 41
	L_Id           shift, and enter state 33

	Char           goto state 34
	Integer        goto state 35
	String         goto state 51
	Float          goto state 37
	Id             goto state 52
	Exp15          goto state 53
	Exp14          goto state 54
	Exp12          goto state 59
	Exp11          goto state 60
	Exp10          goto state 61
	Exp8           goto state 64
	Exp4           goto state 71
	Exp5           goto state 72
	Exp6           goto state 70
	Exp7           goto state 68
	Exp9           goto state 66
	Exp13          goto state 63
	QualConst      goto state 56
	Literal        goto state 57

State 20

	%start_pExp5 -> . Exp5                              (rule 20)

	'('            shift, and enter state 58
	L_charac       shift, and enter state 30
	L_integ        shift, and enter state 39
	L_quoted       shift, and enter state 40
	L_Float        shift, and enter state 41
	L_Id           shift, and enter state 33
